# aws-cloudformation-templates

./: 21-automation.yaml  21-it-infrastructure.yaml  21-trouble-shooting.yaml  21-web-service-provisioning.yaml  21_automation.yaml  21_it_infrastructure.yaml  21_trouble_shooting.yaml  21_web_service_provisioning.yaml  22-automation-ecs.yaml  22-trouble-shooting.yaml  22-troubleshooting.yaml  22-web-service-provisioning.yaml  README.md  alb-socketio.yaml  bastion.yaml  batch.yaml  batch_on_eks.yaml  ecs.yaml  eks.yaml  eks_node_monitoring_agent.yaml  eksctl_on_ec2.yaml  nlb-asg.yaml  nlb-socketio.yaml
000_deprecated/: alb_asg.yaml  eks_karpenter.yaml  eksctl_on_ec2.yaml  network.yaml
000_nlb_asg_socketio/: README.md
001_alb_asg_socketio/: README.md  alb_socketio.yaml
001_nlb_asg_socketio/: README.md  nlb_socketio.yaml
002_alb_asg_lamp_stack/: README.md
003_alb_asg_lamp_stack/: alb_asg.yaml
003_codepipeline_ecs_bluegreen/: READMD.md
004_batch_on_eks/: README.md  batch_on_eks.yaml
005_eks_nodegroup/: eks_mng.yaml
006_eks_custom_nodegroup/: README.md  eks_hpa_test.yaml
006_eks_karpenter/: README.md  eks_karpenter.yaml
007_eks_aws_load_balancer_controller/: internal_nlb_service.yaml
008_eks_aws_load_balancer_controller/: internal_alb_ingress.yaml  internal_nlb_service.yaml  internet_facing_alb_ingress.yaml  internet_facing_nlb_service.yaml  kube-ops-view.yaml  sync_alb.yaml  sync_nlb.yaml
009_eks_ebs_csi_driver/: template.yaml  (+1 more)
082_code_pipeline_eks/src/fastapi/: Dockerfile  pyproject.toml
082_code_pipeline_eks/src/fastapi/api/: main.py
(+455 files in other folders)
